--- a/.env.development
+++ b/.env.development
@@ -5,20 +5,20 @@ VITE_PORT = 3001
 VITE_PUBLIC_PATH = /
 
 # 是否开启 mock
-VITE_USE_MOCK = true
+VITE_USE_MOCK = false
 
 # 是否开启控制台打印 mock 请求信息
 VITE_LOGGER_MOCK = true
 
 # 是否删除console
-VITE_DROP_CONSOLE = true
+VITE_DROP_CONSOLE = false
 
 # 跨域代理，可以配置多个，请注意不要换行
 #VITE_PROXY = [["/appApi","http://localhost:8001"],["/upload","http://localhost:8001/upload"]]
 #VITE_PROXY=[["/api","https://naive-ui-admin"]]
 
 # API 接口地址
-VITE_GLOB_API_URL =
+VITE_GLOB_API_URL = http://127.0.0.1:8001
 
 # 接口前缀
 VITE_GLOB_API_URL_PREFIX =
